--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nodots-llc/backgammon-api-utils",
-  "version": "1.0.0",
+  "version": "4.5.0",
   "description": "Shared utilities for nodots-backgammon API operations",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -11,16 +11,23 @@
     "backgammon",
     "api",
     "utilities",
-    "chess",
     "boardgame"
   ],
   "author": "Ken Riley <kenr@nodots.com>",
   "license": "MIT",
+  "publishConfig": {
+    "access": "public",
+    "provenance": true
+  },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/nodots/nodots-backgammon-api-utils.git"
+    "url": "git+https://github.com/nodots/nodots-backgammon.git",
+    "directory": "packages/api-utils"
   },
-  "homepage": "https://github.com/nodots/nodots-backgammon-api-utils#readme",
+  "homepage": "https://github.com/nodots/nodots-backgammon/tree/main/packages/api-utils",
+  "bugs": {
+    "url": "https://github.com/nodots/nodots-backgammon/issues"
+  },
   "scripts": {
     "build": "tsc",
     "test": "jest",
@@ -30,9 +37,11 @@
     "lint:fix": "eslint src/**/*.ts --fix",
     "clean": "rm -rf dist coverage",
     "prepare": "npm run build",
-    "publish:npm": "npm publish --access public"
+    "publish:npm": "npm publish --access public --provenance"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@nodots-llc/backgammon-types": "^4.5.0"
+  },
   "devDependencies": {
     "@eslint/js": "^9.2.0",
     "@types/jest": "^29.5.14",
@@ -45,4 +54,8 @@
     "typescript-eslint": "^8.23.0"
   },
   "peerDependencies": {}
+  ,
+  "engines": {
+    "node": ">=18"
+  }
 }
