--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nodots-llc/backgammon-api-utils",
-  "version": "4.5.0",
+  "version": "4.5.1",
   "description": "Shared utilities for nodots-backgammon API operations",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -21,12 +21,11 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/nodots/nodots-backgammon.git",
-    "directory": "packages/api-utils"
+    "url": "git@github.com:nodots/nodots-backgammon-api-utils.git"
   },
-  "homepage": "https://github.com/nodots/nodots-backgammon/tree/main/packages/api-utils",
+  "homepage": "https://github.com/nodots/nodots-backgammon-api-utils",
   "bugs": {
-    "url": "https://github.com/nodots/nodots-backgammon/issues"
+    "url": "https://github.com/nodots/nodots-backgammon-api-utils/issues"
   },
   "scripts": {
     "build": "tsc",
@@ -40,7 +39,7 @@
     "publish:npm": "npm publish --access public --provenance"
   },
   "dependencies": {
-    "@nodots-llc/backgammon-types": "^4.5.0"
+    "@nodots-llc/backgammon-types": "^4.5.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.2.0",
@@ -53,8 +52,7 @@
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.23.0"
   },
-  "peerDependencies": {}
-  ,
+  "peerDependencies": {},
   "engines": {
     "node": ">=18"
   }
